# truly-offline-rag

./: .gitignore  README.md  main.py  pyproject.toml  recollection.py  requirements.txt  test.py
backend/: main.py  mandiao.db  server.py
backend/ollama/: models_config.py  ollama_manager.py
backend/pdf_helper/: embed_model.py  parse.py  retrieval.py  store.py
backend/routes/: chat_routes.py  embed_routes.py  general_routes.py  setup_routes.py  sqlite_routes.py
backend/src/: embedding.py  parser.py
backend/src/pdf/: embed_model.py  parse.py  store.py
backend/src/query/: llm.py  retrieve.py
backend/src/routes/: demo_routes.py  query_routes.py  sqlite.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  router.js
frontend/src/components/: FileUpload.vue  Query.vue  Upload.vue  UserQuery.vue
frontend/src/views/: Chat.vue  Home.vue  Upload.vue
packaging/: Imandiao企业私有大模型.spec  build.py
