[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "edwin",email = "12edwinho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyinstaller (>=6.12.0,<7.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "pyqt6-webengine (>=6.8.0,<7.0.0)",
    "db-sqlite3 (>=0.0.1,<0.0.2)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
