[tool.poetry]
name = "ai-desktop-app"
version = "0.1.0"
description = "AI Desktop Application with Ollama Integration"
authors = ["ern see <tallshadow17@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyQt6 = "^6.6.0"
PyQt6-WebEngine = "^6.6.0"
PyQt6-Qt6 = "^6.6.0"
PyQt6-sip = "^13.6.0"
"web.py" = "^0.62"
requests = "^2.31.0"
psutil = "^5.9.5"
tqdm = "^4.67.1"
ollama-python = "^0.1.2"
pywin32 = "^310"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
path = "^17.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pyinstaller = { version = "^5.13.0", markers = "python_version < '3.13'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-desktop-app = "main:main"
